# deploy-ml

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: SECRETS.md  database_uml.md  model_performance.md  secrets.md
scripts/: P3_template_modelistation_supervisee_data_scientist.ipynb  create_db.py  query_db.py
sql/: schema.sql
src/api/: __init__.py  dependencies.py  main.py
src/api/v1/: __init__.py  router.py
src/api/v1/endpoints/: __init__.py  database.py  health.py  models.py  predictions.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/db/: __init__.py  database.py  models.py
src/models/: co2_model.joblib  energy_model.joblib  model_metadata.json
src/schemas/: __init__.py  requests.py  responses.py
src/services/: __init__.py  predictor.py
tests/: conftest.py  markers.py  test_api_endpoints.py  test_database.py  test_predictions.py  test_structure.py
